# pyptoject_template_gitlab

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json
docs/: design.md  requirements.md
hooks/: post_gen_project.sh
{{cookiecutter.project_name}}/: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  README.md  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt
{{cookiecutter.project_name}}/docs/: design.md  requirements.md
{{cookiecutter.project_name}}/docs/source/: conf.py  index.rst  installation.rst  readme.rst  usage.rst
{{cookiecutter.project_name}}/gitlab/: Dockerfile  gitlab-ci.build.yml  gitlab-ci.build_ci_image.yml  gitlab-ci.deploy.yml  gitlab-ci.reports.yml  gitlab-ci.tests.yml
{{cookiecutter.project_name}}/scripts/: prepare_release.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: __init__.py  cli.py
{{cookiecutter.project_name}}/tests/system/: test_cli.py
