[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_name}}"
authors = [{name = "{{ cookiecutter.full_name }}", email="{{ cookiecutter.email }}"}]
description = "{{cookiecutter.description}}"
readme = "README.md"
license = { file="LICENSE" }
dynamic = ["dependencies", "version"]

requires-python = ">=3.7"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.setuptools_scm]
write_to = "src/{{ cookiecutter.project_name }}/_version.py"


[project.scripts]
{{cookiecutter.project_name}} = '{{cookiecutter.project_name}}.cli:cli'
